fix stretching node sizes

--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ body {
     padding: 3rem;
     border: 1px black solid;
     border-radius: 1rem;
-    max-width: 100vw;
+    max-width: 60vw;
     color:black;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -78,10 +78,11 @@ body {
 
 .block {
 
-    min-width: 200px;
+    /* min-width: 200px; */
+    width: 350px;
     background: crimson;
     margin: 1rem;
-    border-radius: 5%;
+    border-radius: 2rem;
     display: grid;
     align-items: center;
     justify-content: center;
